k8s/app/40-mocks.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-bank
  namespace: license-app
spec:
  selector:
    app: mock-bank
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-bank
  namespace: license-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-bank
  template:
    metadata:
      labels:
        app: mock-bank
    spec:
      containers:
        - name: mock-bank
          image: mock-bank:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mock-document-validator
  namespace: license-app
spec:
  selector:
    app: mock-document-validator
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-document-validator
  namespace: license-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-document-validator
  template:
    metadata:
      labels:
        app: mock-document-validator
    spec:
      containers:
        - name: mock-document-validator
          image: mock-document-validator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
